--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -1,12 +1,12 @@
-name: IBM Cloud Auto Restart
+#name: IBM Cloud Auto Restart
 
-on:
+#on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-  schedule:
-    - cron: '0 12 * * *'
+  #schedule:
+    #- cron: '0 12 * * *'
 
 
 jobs:
